<?xml version="1.0"?>
<package format="2">
  <name>hfsm_decision_maker</name>
  <version>0.0.1</version>
  <description>The hfsm_decision_maker package</description>

  <maintainer email="libok@todo.todo">libok</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>tf</build_depend>
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>autoware_msgs</build_export_depend>
  <build_export_depend>smach</build_export_depend>
  <build_export_depend>smach_ros</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
