<?xml version="1.0"?>
<package format="2">
  <name>hfsm_dummy_pub</name>
  <version>0.0.1</version>
  <description>Dummy publisher to test hfsm_decision_maker end-to-end</description>

  <maintainer email="libok@todo.todo">libok</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>

  <export>
  </export>
</package>
